--- a/grid-simulator/package.json
+++ b/grid-simulator/package.json
@@ -16,9 +16,12 @@
     "ai": "^3.3.41",
     "framer-motion": "^12.34.3",
     "lucide-react": "^0.575.0",
+    "mapbox-gl": "^3.18.1",
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18",
+    "react-map-gl": "^8.1.0",
+    "react-three-map": "^1.0.0",
     "three": "^0.183.1",
     "zustand": "^5.0.11"
   },
