--- a/grid-simulator/package.json
+++ b/grid-simulator/package.json
@@ -10,22 +10,27 @@
   },
   "dependencies": {
     "@ai-sdk/anthropic": "^0.0.51",
+    "@mapbox/mapbox-gl-geocoder": "^5.1.2",
     "@react-three/drei": "^9.122.0",
     "@react-three/fiber": "^8.18.0",
     "@types/three": "^0.183.1",
     "ai": "^3.3.41",
+    "clsx": "^2.1.1",
     "framer-motion": "^12.34.3",
     "lucide-react": "^0.575.0",
     "mapbox-gl": "^3.18.1",
     "next": "14.2.15",
+    "next-themes": "^0.4.6",
     "react": "^18",
     "react-dom": "^18",
     "react-map-gl": "^8.1.0",
     "react-three-map": "^1.0.0",
+    "tailwind-merge": "^3.5.0",
     "three": "^0.183.1",
     "zustand": "^5.0.11"
   },
   "devDependencies": {
+    "@types/mapbox__mapbox-gl-geocoder": "^5.1.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
